Enhance ML prediction functionality and update financial display
- Refactored runMLPrediction function in app.js to streamline the prediction process and include financial calculations.
- Updated index.html to add new elements for displaying hardware, labour, legal costs, and routine maintenance, along with total cost and ROI period.
- Improved error handling and logging for better debugging during ML predictions.

--- a/index.html
+++ b/index.html
@@ -93,11 +93,31 @@
 
         <div id="tab-financial" class="tab-content">
             <div class="grid">
-                <div class="cell"><span class="val highlight" id="val_cost">$0</span><span class="label">EST. COST</span></div>
-                <div class="cell"><span class="val highlight" id="val_savings">$0</span><span class="label">YR SAVINGS</span></div>
+                <div class="cell">
+                    <span class="val" id="fin_panels">USD 0</span>
+                    <span class="label">HARDWARE (PANELS)</span>
+                </div>
+                <div class="cell">
+                    <span class="val" id="fin_labour">USD 0</span>
+                    <span class="label">LABOUR & INSTALL</span>
+                </div>
+
+                <div class="cell">
+                    <span class="val" id="fin_legal" style="color: #f59e0b;">USD 0</span>
+                    <span class="label">LEGAL COST</span>
+                </div>
+                <div class="cell">
+                    <span class="val" id="fin_maint">USD 0/yr</span>
+                    <span class="label">ROUTINE MAINTENANCE</span>
+                </div>
+
+                <div class="cell full-width" style="border-top: 1px solid rgba(255,255,255,0.1); margin-top: 5px;">
+                    <span class="val highlight" id="fin_total">USD 0</span>
+                    <span class="label">TOTAL COST</span>
+                </div>
                 <div class="cell full-width">
-                    <span class="val" id="val_breakeven">0 Years</span>
-                    <span class="label">ROI PERIOD</span>
+                    <span class="val" id="fin_roi" style="color: #00ffaa;">-- Years</span>
+                    <span class="label">ROI (BREAK-EVEN PERIOD)</span>
                 </div>
             </div>
         </div>
